--- a/index.html
+++ b/index.html
@@ -1,58 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <script
-        src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Frontend Mentor | Manage landing page</title>
-</head>
-<body>
-    <div id="page">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+        <script
+            src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="./css/main.css">
+        <title>Frontend Mentor | Manage landing page</title>
+    </head>
+    <body>
         <header>
-            <div class="header">
-                <div class="logo"><img src="images/logo.svg" alt=""></div>
-                <div class="show-nav">
-                    <div class="open"><button><img src="images/icon-hamburger.svg" alt=""></button></div>
-                    <div class="close"><button><img src="images/icon-close.svg" alt=""></button></div>
-                </div>
-                <nav>
-                    <ul>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">Product</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Community</a></li>
-                    </ul>
-                </nav>
-                <div class="start"><button>Get Started</button></div>
-            </div>
-            <div class="mobile-nav">
-                <nav>
-                    <ul>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">Product</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Community</a></li>
-                    </ul>
-                </nav>
-            </div>
+            <div class="logo"><img src="images/logo.svg" alt=""></div>
+            <div class="open"><img src="images/icon-hamburger.svg" alt=""></div>
+            <nav>
+                <div class="close"><img src="images/icon-close.svg" alt=""></div>
+                <ul>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Product</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Community</a></li>
+                </ul>
+            </nav>
+            <div class="start"><button>Get Started</button></div>
         </header>
         <section id="sec1">
             <div class="greeding">
-                <h1>Bring everyone together to build better products.</h1>
+                <h2 class="h1">Bring everyone together to build better products.</h2>
                 <p>Manage makes it simple for software teams to plan day-to-day 
                     tasks while keeping the larger team goals in view.</p>
                 <button>Get Started</button>
             </div>
-            <div class="percent"><img src="images/illustration-intro.svg" alt=""></div>
+            <div class="illus"><img src="images/illustration-intro.svg" alt=""></div>
         </section>
         <section id="sec2">
             <div class="disc">
@@ -62,33 +46,33 @@
                     product teams.</p>
             </div>
             <div class="articles">
-                <div class="article">
-                    <p>01</p>
-                    <div>
+                <article class="article">
+                    <p class="rank">01</p>
+                    <div class="more-info">
                         <h3>Track company-wide progress</h3>
                         <p>See how your day-to-day tasks fit into the wider vision. Go from 
                             tracking progress at the milestone level all the way done to the 
                             smallest of details. Never lose sight of the bigger picture again.</p>
                     </div>
-                </div>
-                <div class="article">
-                    <p>02</p>
-                    <div>
+                </article>
+                <article class="article">
+                    <p class="rank">02</p>
+                    <div class="more-info">
                         <h3>Advanced built-in reports</h3>
                         <p>Set internal delivery estimates and track progress toward company 
                             goals. Our customisable dashboard helps you build out the reports 
                             you need to keep key stakeholders informed.</p>
                     </div>
-                </div>
-                <div class="article">
-                    <p>03</p>
-                    <div>
+                </article>
+                <article class="article">
+                    <p class="rank">03</p>
+                    <div class="more-info">
                         <h3>Everything you need in one place</h3>
                         <p>Stop jumping from one service to another to communicate, store files, 
                             track tasks and share documents. Manage offers an all-in-one team 
                             productivity solution.</p>
                     </div>
-                </div>
+                </article>
             </div>
         </section>
         <section id="sec3">
@@ -96,31 +80,31 @@
             <div class="people">
                 <div class="person one">
                     <img src="images/avatar-anisha.png" alt="">
-                    <h4>Anisha Li</h4>
+                    <h3>Anisha Li</h3>
                     <p>“Manage has supercharged our team’s workflow. The ability to maintain 
                         visibility on larger milestones at all times keeps everyone motivated.”</p>
                 </div>
                 <div class="person two">
                     <img src="images/avatar-ali.png" alt="">
-                    <h4>Ali Bravo</h4>
+                    <h3>Ali Bravo</h3>
                     <p>“We have been able to cancel so many other subscriptions since using 
                         Manage. There is no more cross-channel confusion and everyone is much 
                         more focused.</p>
                 </div>
                 <div class="person three">
                     <img src="images/avatar-richard.png" alt="">
-                    <h4>Richard Watts</h4>
+                    <h3>Richard Watts</h3>
                     <p>“Manage allows us to provide structure and process. It keeps us organized 
                         and focused. I can’t stop recommending them to everyone I talk to!”</p>
                 </div>
                 <div class="person four">
                     <img src="images/avatar-shanai.png" alt="">
-                    <h4>Shanai Gough</h4>
+                    <h3>Shanai Gough</h3>
                     <p>“Their software allows us to track, manage and collaborate on our projects 
                         from anywhere. It keeps the whole team in-sync without being intrusive.”</p>
                 </div>
             </div>
-            <div class="btns">
+            <div class="slide-btns">
                 <span class="btn first"></span>
                 <span class="btn second"></span>
                 <span class="btn third"></span>
@@ -128,50 +112,47 @@
             </div>
             <div class="start"><button>Get Started</button></div>
         </section>
+        <section id="sec4">
+            <h2>Simplify how your team<br> works today.</h2>
+            <div class="start"><button class="last-btn">Get Started</button></div>
+        </section>
         <footer>
-            <div class="up">
-                <h1>Simplify how your team works today.</h1>
-                <div class="start"><button>Get Started</button></div>
-            </div>
-            <div class="down">
-                <div class="social-media">
-                    <div class="logo"><img src="images/logo.svg" alt=""><span>manage</span></div>
-                    <div class="social">
-                        <a href="#"><i class="fab fa-facebook-square"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-pinterest"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-                <div class="links">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">Products</a></li>
-                        <li><a href="#">About Us</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Community</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                    </ul>
-                </div>
-                <div class="copy">
-                    <form action="" id="form">
-                        <input type="email" id="email" placeholder="Updates in your inbox…">
-                        <input type="submit" id="submit" value="Go">
-                        <p class="error">Plaese enter a valid email</p>
+            <div class="social-media">
+                <div class="logo"><img src="images/logo.svg" alt=""><span>manage</span></div>
+                <div class="social">
+                    <a href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
-        </form>
-        <p class="copy-right">Copyright 2020. All Rights Reserved</p>
+            <div class="links">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Community</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="copy">
+                <form action="" id="form">
+                    <input type="email" id="email" placeholder="Updates in your inbox…">
+                    <input type="submit" id="submit" value="Go">
+                    <p class="error">Plaese enter a valid email</p>
+                </form>
+                <p class="copy-right">Copyright 2020. All Rights Reserved</p>
+            </div>
         </footer>
-    </div>
-    <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="https://github.com/elasri21" target="_blank">elasri21</a>.
-    </div>
-    <script src="main.js"></script>
-</body>
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+            Coded by <a href="https://github.com/elasri21" target="_blank">elasri21</a>.
+        </div>
+        <script src="main.js"></script>
+    </body>
 </html>
