--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <body>
         <header>
             <div class="logo"><img src="images/logo.svg" alt=""></div>
-            <div class="open"><img src="images/icon-hamburger.svg" alt=""></div>
             <nav>
-                <div class="close"><img src="images/icon-close.svg" alt=""></div>
                 <ul>
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">Product</a></li>
@@ -26,8 +24,10 @@
                     <li><a href="#">Careers</a></li>
                     <li><a href="#">Community</a></li>
                 </ul>
+                <button class="start">Get Started</button>
             </nav>
-            <div class="start"><button>Get Started</button></div>
+            <div class="open"><img src="images/icon-hamburger.svg" alt="open menu"></div>
+            <div class="close"><img src="images/icon-close.svg" alt="close menu"></div>
         </header>
         <section id="sec1">
             <div class="greeding">
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <div class="links">
-                <ul>
+                <ul class="first-links">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">Products</a></li>
